fix: exclude hidden files

--- a/.github/workflows/wordpress-cs-check.yml
+++ b/.github/workflows/wordpress-cs-check.yml
@@ -34,3 +34,5 @@ jobs:
 
       - name: Run plugin check
         uses: swissspidy/wp-plugin-check-action@v1
+        with:
+          exclude-checks: 'file_type'
