--- a/.github/workflows/wordpress-cs-check.yml
+++ b/.github/workflows/wordpress-cs-check.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Run plugin check
         uses: swissspidy/wp-plugin-check-action@v1
         with:
-          exclude-checks: 'file_type,plugin_header_text_domain'
+          exclude-checks: 'file_type,plugin_header_text_domain,trademarks'
