--- a/.github/workflows/publish-svn.yml
+++ b/.github/workflows/publish-svn.yml
@@ -3,9 +3,9 @@ name: Publish to WordPress SVN
 on:
   workflow_dispatch:
     inputs:
-        version:
-            description: 'Example: 2.0.7'
-            type: string
+        message:
+          description: 'Commit message:'
+          type: string
 
 jobs:
   build:
@@ -26,10 +26,10 @@ jobs:
       id: deploy
       uses: richard-muvirimi/deploy-wordpress-plugin@development
       with:
-        plugin-repository: https://svn.riouxsvn.com/openedx-commerc/
-        svn-username: ${{ secrets.SVN_USERNAME }}
-        svn-password: ${{ secrets.SVN_PASSWORD }}
+        plugin-repository: https://helixteamhub.cloud/edunext/projects/openedx-commerce/repositories/subversion/openedx-commerce
+        svn-username: ${{ secrets.SVN_HELIX_USERNAME }}
+        svn-password: ${{ secrets.SVN_HELIX_PASSWORD }}
         plugin-zip-folder: openedx-commerce
-        commit-message: Release ${{ inputs.version }}
+        commit-message: ${{ inputs.message }}
         assets-directory: ../docs/source/_images/plugin-page
         working-directory: openedx-commerce
