--- a/.github/workflows/publish-svn.yml
+++ b/.github/workflows/publish-svn.yml
@@ -3,9 +3,10 @@ name: Publish to WordPress SVN
 on:
   workflow_dispatch:
     inputs:
-        version:
-            description: 'Example: 2.0.7'
-            type: string
+      message:
+        description: 'Commit message'
+        default: 'Release x'
+        type: string
 
 jobs:
   build:
@@ -29,7 +30,6 @@ jobs:
         plugin-repository: https://svn.riouxsvn.com/openedx-commerc/
         svn-username: ${{ secrets.SVN_USERNAME }}
         svn-password: ${{ secrets.SVN_PASSWORD }}
-        plugin-zip-folder: openedx-commerce
-        commit-message: Release ${{ inputs.version }}
+        commit-message: ${{ inputs.message }}
         assets-directory: ../docs/source/_images/plugin-page
         working-directory: openedx-commerce
