chore: use our version of the workflow

--- a/.github/workflows/publish-svn.yml
+++ b/.github/workflows/publish-svn.yml
@@ -1,11 +1,6 @@
 name: Publish to WordPress SVN
 
-on:
-  workflow_dispatch:
-    inputs:
-        version:
-            description: 'Example: 2.0.7'
-            type: string
+on: workflow_dispatch
 
 jobs:
   build:
@@ -24,11 +19,10 @@ jobs:
 
     - name: WordPress Plugin Deploy
       id: deploy
-      uses: richard-muvirimi/deploy-wordpress-plugin@development
+      uses: ./.github/actions/svn-publish
       with:
-        plugin-repository: https://svn.riouxsvn.com/openedx-commerc/
+        svn-repository: https://svn.riouxsvn.com/openedx-commerc
         svn-username: ${{ secrets.SVN_USERNAME }}
         svn-password: ${{ secrets.SVN_PASSWORD }}
-        plugin-zip-folder: openedx-commerce
-        commit-message: Release ${{ inputs.version }}
-        assets-directory: docs/source/_images/plugin-page
+        assets-directory: ../docs/source/_images/plugin-page
+        working-directory: openedx-commerce
